force-app/main/default/objects/BP_PlatformUser__c/BP_PlatformUser__c.object-meta.xml
<CustomObject>
    <label>Usuario de Plataforma</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de usuario de plataforma</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usuarios de Plataforma</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>