force-app/main/default/objects/BP_PlatformUser__c/fields/BP_CallID__c.field-meta.xml
<CustomField>
    <fullName>BP_CallID__c</fullName>
    <description>ID de llamada realizada</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ID llamada realizada</label>
    <length>200</length>
    <type>Text</type>
</CustomField>