force-app/main/default/objects/BP_PlatformUser__c/fields/BP_Contact__c.field-meta.xml
<CustomField>
    <fullName>BP_Contact__c</fullName>
    <description>Picklist de contacto SI/NO</description>
    <label>Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>