force-app/main/default/objects/BP_PlatformUser__c/fields/BP_Email__c.field-meta.xml
<CustomField>
    <fullName>BP_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Correo 001</label>
    <type>Email</type>
</CustomField>