force-app/main/default/objects/BP_PlatformUser__c/fields/BP_FirtName__c.field-meta.xml
<CustomField>
    <fullName>BP_FirtName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre</label>
    <length>80</length>
    <type>Text</type>
</CustomField>