force-app/main/default/objects/BP_PlatformUser__c/fields/BP_Product_PlatformUser__c.field-meta.xml
<CustomField>
    <fullName>BP_Product_PlatformUser__c</fullName>
    <label>Producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CASH FINANCIERO</fullName>
            </value>
            <value>
                <fullName>BUSINESS BANKING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>