force-app/main/default/objects/BP_PlatformUser__c/fields/BP_Profile__c.field-meta.xml
<CustomField>
    <fullName>BP_Profile__c</fullName>
    <label>Perfil</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BP_Product_PlatformUser__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrador</fullName>
            </value>
            <value>
                <fullName>Administrador + Operador</fullName>
            </value>
            <value>
                <fullName>Aprobador</fullName>
            </value>
            <value>
                <fullName>Aprobador + Operador</fullName>
            </value>
            <value>
                <fullName>Consultor</fullName>
            </value>
            <value>
                <fullName>De consulta</fullName>
            </value>
            <value>
                <fullName>Gestor de Operaciones</fullName>
            </value>
            <value>
                <fullName>Gestor de Usuarios</fullName>
            </value>
            <value>
                <fullName>Operador</fullName>
            </value>
            <value>
                <fullName>Operador y aprobador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>