force-app/main/default/objects/BP_PlatformUser__c/fields/BP_RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>BP_RelatedCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso relacionado</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Usuarios de Plataforma</relationshipLabel>
    <relationshipName>UsuariosDePlataforma</relationshipName>
    <type>Lookup</type>
</CustomField>