force-app/main/default/objects/BP_PlatformUser__c/fields/BP_Status__c.field-meta.xml
<CustomField>
    <fullName>BP_Status__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDIENTE</fullName>
            </value>
            <value>
                <fullName>VIGENTE</fullName>
            </value>
            <value>
                <fullName>ELIMINADO</fullName>
            </value>
            <value>
                <fullName>DESAFILIADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>