force-app/main/default/objects/BP_PlatformUser__c/fields/BP_Telephone__c.field-meta.xml
<CustomField>
    <fullName>BP_Telephone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>teléfono</label>
    <type>Phone</type>
</CustomField>