force-app/main/default/objects/BP_PlatformUser__c/fields/DOI__c.field-meta.xml
<CustomField>
    <fullName>DOI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DOI</label>
    <length>80</length>
    <type>Text</type>
</CustomField>