force-app/main/default/objects/BP_PlatformUser__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>